<resources>
    <string name="app_name">Go-Doggies</string>
    <string name="action_settings">Settings</string>

    <!-- Authentication -->
    <string name="accountName">Go-Doggies</string>
    <string name="email_label">Email</string>
    <string name="password_label">Password</string>
    <string name="login_button_label">Login</string>
    <string name="sign_in_button_label">Sign In</string>
    <string name="sign_up_button_label">Sign Up</string>
    <string name="services_button">Services</string>

    <!-- launcher -->
    <string name="sign_in_sign_up">Sign-in/Sign-up</string>

    <!-- Sync -->
    <string name="accountType">app.go_doggies.com</string>
    <string name="content_authority">app.go_doggies.com.go_doggies</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings relatedactivity_loginogin -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <!-- Dashboard-->
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="test">Test Items</string>
    <string name="appointment">Appointment</string>
    <string name="transaction">Transaction</string>
    <string name="my_client">My Client</string>
    <string name="messages">Messages</string>
    <string name="my_store">My Store</string>
    <string name="browse">Browse</string>
    <string name="title_activity_my_clients">MyClients</string>

    <!-- Internal Storage -->
    <string name="interview"> Match the challenge, I BELIEVE IN YOU!!</string>

    <string name="title_activity_client_details">ClientDetails</string>
    <string name="title_activity_dog_activity">DogActivity</string>

</resources>
