<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/account_login_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_app_green"
    android:focusableInTouchMode="true"
    android:gravity="top"
    android:inputType="none"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:inputType="none"
        android:src="@drawable/go_doggie_white_round_white" />

    <AutoCompleteTextView
        android:id="@+id/dummyTextView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:inputType="none"
        android:nextFocusLeft="@id/dummyTextView"
        android:nextFocusUp="@id/dummyTextView" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginLeft="40dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_gravity="left"
            android:layout_weight="0.35"
            android:src="@drawable/small_person" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="Login/Register"
            android:textAlignment="gravity"
            android:textColor="@android:color/white"
            android:textSize="18sp" />
    </LinearLayout>

    <EditText
        android:id="@+id/username_text"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:hint="@string/email_label"
        android:inputType="textEmailAddress"
        android:textColorHint="@android:color/white"
        android:theme="@style/GoDoggieEditText" />

    <EditText
        android:id="@+id/password_text"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:ems="10"
        android:hint="@string/password_label"
        android:inputType="textPassword"
        android:textColorHint="@android:color/white"
        android:theme="@style/GoDoggieEditText" />

    <Button
        android:id="@+id/sign_in_button"
        style="@style/GoDoggieButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:stateListAnimator="@animator/button_anim"
        android:text="@string/login_button_label"
        android:textColor="@android:color/white" />

    <Button
        style="@style/GoDoggieButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:stateListAnimator="@animator/button_anim"
        android:text="@string/sign_up_button_label"
        android:textAllCaps="false"
        android:textColor="@android:color/white" />
</LinearLayout>
