<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_dashboard">

    <ImageButton
        android:id="@+id/imageViewProfilePicture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:background="@drawable/profile_pic"
        android:contentDescription="profile_picture"
        android:elevation="5dp"
        android:stateListAnimator="@animator/button_anim"
        app:srcCompat="@android:drawable/ic_menu_camera" />

    <TextView
        android:id="@+id/groomer_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="TextView"
        android:textAlignment="center" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:background="@android:color/white"
        android:gravity="center"
        android:padding="20dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/dashboard_border_right">

                <ImageButton
                    android:id="@+id/appointment_button"
                    android:layout_width="match_parent"
                    android:layout_height="58dp"
                    android:background="@drawable/appointment_button"
                    android:elevation="5dp"
                    android:stateListAnimator="@animator/button_anim" />
            </FrameLayout>

            <ImageButton
                android:id="@+id/transaction_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/transaction_button"
                android:elevation="5dp"
                android:padding="10dp"
                android:stateListAnimator="@animator/button_anim" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="@android:color/white">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/dashboard_border_right"
                android:gravity="top|center"
                android:text="@string/appointment"
                android:textAlignment="center" />


            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="top|center"
                android:text="@string/transaction"
                android:textAlignment="center" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="@android:color/white">

            <TextView
                android:id="@+id/dummyTextView1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/dashboard_border_right"
                android:padding="5dp" />


            <TextView
                android:id="@+id/dummyTextView2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="5dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/dashboard_border_right">

                <ImageButton
                    android:id="@+id/my_client_button"
                    android:layout_width="match_parent"
                    android:layout_height="58dp"
                    android:background="@drawable/my_client_button"
                    android:elevation="5dp"
                    android:stateListAnimator="@animator/button_anim" />
            </FrameLayout>

            <ImageButton
                android:id="@+id/message_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/message_button"
                android:elevation="5dp"
                android:padding="10dp"
                android:stateListAnimator="@animator/button_anim" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="@android:color/white">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/dashboard_border_right"
                android:text="@string/my_client"
                android:textAlignment="center" />


            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/messages"
                android:textAlignment="center" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="@android:color/white">

            <TextView
                android:id="@+id/dummyTextView3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/dashboard_border_right"
                android:padding="5dp" />


            <TextView
                android:id="@+id/dummyTextView4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="5dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/dashboard_border_right">

                <ImageButton
                    android:id="@+id/store_button"
                    android:layout_width="match_parent"
                    android:layout_height="58dp"
                    android:background="@drawable/store_button"
                    android:elevation="5dp"
                    android:stateListAnimator="@animator/button_anim" />
            </FrameLayout>

            <ImageButton
                android:id="@+id/browse_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/browse_button"
                android:elevation="5dp"
                android:padding="10dp"
                android:stateListAnimator="@animator/button_anim" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="@android:color/white">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/dashboard_border_right"
                android:text="@string/my_store"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/browse"
                android:textAlignment="center" />
        </TableRow>

    </TableLayout>
</LinearLayout>